added sass for including css from eonasdan

--- a/src/timepicker/timepicker.jade
+++ b/src/timepicker/timepicker.jade
@@ -1,6 +1,6 @@
 template
-  require(from="eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")
-  require(from="../style.css")
+  //require(from="eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")
+  require(from="../styles.css")
 
   div.input-group.date
     input.form-control(type="text", disabled.bind="disabled", readonly.bind="readonly")
