--- a/src/datepicker/datepicker.jade
+++ b/src/datepicker/datepicker.jade
@@ -1,5 +1,6 @@
 template
-  require(from="../styles.css")
+  require(from="eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")
+  require(from="../style.css")
 
   div.input-group.date(show.bind="icon")
     input.form-control(type="text", disabled.bind="disabled", readonly.bind="readonly")
