--- a/src/datetimepicker/datetimepicker.jade
+++ b/src/datetimepicker/datetimepicker.jade
@@ -1,5 +1,6 @@
 template
-  require(from="../styles.css")
+  require(from="eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")
+  require(from="../style.css")
 
   div.input-group.date
     input.form-control(type="text", disabled.bind="disabled", readonly.bind="readonly")
